# libretro-snakesarena

./: CMakeLists.txt  LICENSE  README.md  assets.hpp  auxiliary.hpp  auxillary.hpp  field.cpp  field.hpp  field_header.cpp  field_header.hpp  game.cpp  game.hpp  game_manager.cpp  game_manager.hpp  input.hpp  level.cpp  level.hpp  libretro.cpp  lr-snakesarena.sh  lr-supersnakes.sh  save_data.cpp  save_data.hpp  snake.cpp  snake.hpp
contexts/: context.hpp  context_game_over.cpp  context_game_over.hpp  context_high_score_entry.cpp  context_high_score_entry.hpp  context_high_score_subwindow.cpp  context_high_score_subwindow.hpp  context_main.cpp  context_main.hpp  context_menu.cpp  context_menu.hpp  parent_context.hpp
engine/: animation.hpp  audio.cpp  audio_mixer.cpp  audio_mixer.hpp  image.cpp  image.hpp  pos.hpp  rect.hpp  renderer.cpp  renderer.hpp  texture.hpp
levels/: level_0_open.tmx  level_1_box.tmx  level_2_opening.tmx  level_3_small.tmx  level_4_heart.tmx  level_Z_heart.tmx  tileset.tsx
planning/: Game.xcf  Main Menu.xcf  Player Colours.txt  raspberry.xcf  sprites.xcf
resources/: background.pnm
resources/audio/: credits.txt
